camera beginning