@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>xyz.codingdaddy</groupId>
-    <artifactId>lesson2</artifactId>
+    <groupId>jogl.shaders</groupId>
+    <artifactId>jogl.shaders</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -33,6 +33,9 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>15</release>
+                    <source>14</source>
+                    <target>14</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
